...
        VStack {
            TabButtonsContainerView(
                alignment: .top,
                selection: $selection) {
                    Color.green.tabScrollItem(tab: "GREEN")
                        .padding()
                    Color.clear.border(Color.white).tabScrollItem(tab: "CLEAR")
                        .padding()
                    PageIndicatorProxy(title: "Page Indicator",
                                       count: 4,
                                       alignment: .bottom)
                        .tabScrollItem(tab: "Page Indicator")
                }
...
